--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -6,10 +6,15 @@
     "outDir": "./dist",
     "outFile": "./dist/performance-array.spec.js",
     "lib": [
-      "es6" 
+      "es6"
     ],
     "declaration": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "removeComments": true,
+    "noUnusedLocals": true,
+    "listEmittedFiles": true,
+    "inlineSources": true
   },
   "include": [
     "./src/**/*.spec.ts",
