--- a/package.json
+++ b/package.json
@@ -26,11 +26,9 @@
   "homepage": "https://github.com/JMuratha/performance-array#readme",
   "devDependencies": {
     "@types/chai": "^4.1.5",
-    "chai": "^4.1.2",
-    "typescript": "^3.0.3"
-  },
-  "dependencies": {
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.10.1"
+    "@types/node": "^10.10.1",
+    "chai": "^4.2.0",
+    "typescript": "^3.2.0"
   }
 }
