fixed build tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "noImplicitReturns": true,
     "removeComments": true,
     "noUnusedLocals": true,
-    "listEmittedFiles": true
+    "listEmittedFiles": true,
+    "types": []
   },
   "files": [
     "./src/PerformanceArray.ts"
