--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.10.1",
     "chai": "^4.2.0",
-    "karma": "^3.1.4",
+    "karma": "^4.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "phantomjs": "^2.1.7",
     "phantomjs-polyfill-find": "0.0.1",
+    "phantomjs-prebuilt": "^2.1.16",
     "tslint": "^5.12.0",
     "typescript": "^3.2.0"
   }
